--- a/squidalytics/landing/templates/landing/hello_world.html
+++ b/squidalytics/landing/templates/landing/hello_world.html
@@ -1,1 +1,8 @@
-<h1>Hello, World!</h1>
+{% extends "base.html" %}
+
+{% block title %}{{ title }}{% endblock %}
+
+{% block content %}
+    <h1>{{ title }}</h1>
+    <p>{{ content }}</p>
+{% endblock %}
