--- a/squidalytics/templates/base.html
+++ b/squidalytics/templates/base.html
@@ -44,10 +44,8 @@
       </script>
       
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{% static 'css/font-marcellus.css' %}">
-    <link rel="stylesheet" href="{% static 'css/font-open-sans.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
