--- a/squidalytics/templates/blocks/equation_block.html
+++ b/squidalytics/templates/blocks/equation_block.html
@@ -1,9 +1,9 @@
-{% load static %}
+{% load static custom_filters %}
 
 <div class="equation-block">
     <div class="equation-content">
         {% autoescape off %}
-        \[{{ value }}\]
+        \[{{ value.equation }}\]
         {% endautoescape %}
     </div>
 </div>
