--- a/squidalytics/templates/includes/header.html
+++ b/squidalytics/templates/includes/header.html
@@ -3,5 +3,6 @@
         <a href="{{ parent.url }}">Home</a>
         <!-- Add other navigation links here -->
     </nav>
-    <h1>{{ calling_page.title }}</h1>
+    <h1>{{ header_title|default:calling_page.title }}</h1>
+    {% block postheader %}{% endblock %}
 </header>
