--- a/squidalytics/templates/cms/articles/blog_page.html
+++ b/squidalytics/templates/cms/articles/blog_page.html
@@ -1,4 +1,4 @@
-{% extends "articles/blog_base.html" %}
+{% extends "cms/articles/blog_base.html" %}
 {% load wagtailimages_tags %}
 
 {% block content %}
