--- a/squidalytics/templates/cms/blocks/equation_block.html
+++ b/squidalytics/templates/cms/blocks/equation_block.html
@@ -1,6 +1,6 @@
 {% load static custom_filters %}
 
-<div class="equation-block">
+<div class="equation-block box">
     <div class="equation-content">
         {% autoescape off %}
         \[{{ value.equation }}\]
