--- a/squidalytics/templates/includes/header.html
+++ b/squidalytics/templates/includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="content">
     <nav>
         <a href="{{ parent.url }}">Home</a>
         <!-- Add other navigation links here -->
