--- a/squidalytics/templates/cms/articles/blog_index_page.html
+++ b/squidalytics/templates/cms/articles/blog_index_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "cms/articles/blog_index_base.html" %}
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% if tag %}
@@ -8,9 +8,6 @@
 {% endif %}
 
 {% block content %}
-    {% if not tag %}
-        {% include "cms/includes/header-index.html" %}
-    {% endif %}
 
     <div class="container">
         {% if tag %}
@@ -40,7 +37,7 @@
                 {% endfor %}
             {% else %}
                 <div class="col-md-12">
-                    <p>Oh, snap. Looks like we were too busy baking to write any blog posts. Sorry.</p>
+                    <p>Woops, looks like there's no articles here yet. Hang tight!</p>
                 </div>
             {% endif %}
         </div>
