--- a/squidalytics/templates/cms/includes/header-blog-index.html
+++ b/squidalytics/templates/cms/includes/header-blog-index.html
@@ -1,10 +1,8 @@
 {% load wagtailcore_tags wagtailimages_tags %}
-
+{% include "includes/header.html" with calling_page=calling_page %}
+{% block postheader %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h1 class="index-header__title">{{ page.title }}</h1>
-        </div>
         <div class="col-sm-12 col-md-7">
             {% if page.introduction %}
                 <p class="index-header__introduction">{{ page.introduction }}</p>
@@ -12,3 +10,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
