--- a/squidalytics/templates/cms/articles/blog_index_base.html
+++ b/squidalytics/templates/cms/articles/blog_index_base.html
@@ -2,6 +2,6 @@
 
 {% block header %}
     <div class="header">
-        {% include "cms/includes/header-blog-index.html" with parent=site_root calling_page=self header_title="Splatoon Articles" %}
+        {% include "cms/includes/header-blog-index.html" with parent=site_root calling_page=self %}
     </div>
 {% endblock header %}
