--- a/squidalytics/articles/templates/index_template.html
+++ b/squidalytics/articles/templates/index_template.html
@@ -1,4 +1,4 @@
-{% extends "cms/base.html" %}
+{% extends "base.html" %}
 {% load wagtailcore_tags navigation_tags wagtailimages_tags %}
 
 {% if tag %}
