--- a/squidalytics/templates/cms/includes/header-blog-index.html
+++ b/squidalytics/templates/cms/includes/header-blog-index.html
@@ -3,9 +3,9 @@
 {% block postheader %}
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-md-7">
+        <div class="">
             {% if page.introduction %}
-                <p class="index-header__introduction">{{ page.introduction }}</p>
+                <p class="">{{ page.introduction }}</p>
             {% endif %}
         </div>
     </div>
