change from bulma to SASS

--- a/squidalytics/templates/includes/header.html
+++ b/squidalytics/templates/includes/header.html
@@ -1,5 +1,5 @@
 <header class="content">
-    <nav class="navbar is-fixed-top is-dark" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-start">
             <a href="/" class="navbar-item">Home</a>
 
