More changes to CSS

--- a/squidalytics/templates/cms/articles/blog_page.html
+++ b/squidalytics/templates/cms/articles/blog_page.html
@@ -28,7 +28,7 @@
                                 {% endfor %}
                             </select>
                         </span>
-                        <span class="icon is-small is-left">
+                        <span class="icon is-small is-left" id="selector-icon">
                             <i class="fas fa-globe"></i>
                         </span>
                     </p>
