--- a/squidalytics/templates/includes/footer.html
+++ b/squidalytics/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
     <p>&copy; 2023-<span id="currentYear"></span> Squidalytics. All rights reserved.</p>
     <!-- Add any additional footer content or links here -->
     <script>
