--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -2611,7 +2611,7 @@ a.tag:hover {
 }
 
 .title {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.125;
@@ -2646,7 +2646,7 @@ a.tag:hover {
 }
 
 .subtitle {
-  color: hsl(0, 0%, 29%);
+  color: #f5f5f5;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
@@ -3817,10 +3817,10 @@ a.tag:hover {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #505050;
   border-radius: 0.25rem;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: hsl(0, 0%, 29%);
+  color: #f5f5f5;
   max-width: 100%;
   position: relative;
 }
@@ -3835,7 +3835,7 @@ a.tag:hover {
 }
 
 .card-header {
-  background-color: transparent;
+  background-color: #272727;
   align-items: stretch;
   box-shadow: 0 0.125em 0.25em rgba(10, 10, 10, 0.1);
   display: flex;
@@ -3843,7 +3843,7 @@ a.tag:hover {
 
 .card-header-title {
   align-items: center;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   display: flex;
   flex-grow: 1;
   font-weight: 700;
@@ -10277,8 +10277,9 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 .footer {
-  background-color: hsl(0, 0%, 98%);
+  background-color: #363636;
   padding: 3rem 1.5rem 6rem;
+  color: #f5f5f5;
 }
 
 @font-face {
@@ -10296,6 +10297,14 @@ html, body {
   border-radius: 5px;
   padding: 20px;
   margin-bottom: 20px;
+}
+
+#selector-icon {
+  color: #ad5ad7;
+}
+
+.date-and-author {
+  color: #ad5ad7;
 }
 
 /*# sourceMappingURL=main.css.map */
