--- a/squidalytics/static/scss/main.scss
+++ b/squidalytics/static/scss/main.scss
@@ -1,10 +1,5 @@
-// Define functions
-
-@mixin fontAwesomeColor($color) {
-    .fa {
-        color: $color;
-    }
-}
+// Define functions and variables
+$accent-color: #ad5ad7;
 
 // Import Bulma's initial variables
 @import "../bulma/sass/utilities/initial-variables";
@@ -19,6 +14,14 @@ $navbar-background-color: #272727;
 $navbar-item-color: #f5f5f5;
 $navbar-item-hover-background-color: lighten($navbar-background-color, 10%);
 $navbar-item-hover-color: $navbar-item-color;
+$footer-background-color: $body-background-color;
+$footer-color: $body-color;
+$card-background-color: lighten($body-background-color, 10%);
+$card-color: $body-color;
+$card-header-background-color: $navbar-background-color;
+$card-header-color: $navbar-item-color;
+$title-color: $body-color;
+$subtitle-color: $body-color;
 
 // Import the rest of Bulma
 @import "../bulma/bulma";
@@ -40,4 +43,12 @@ html, body {
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
+}
+
+#selector-icon {
+    color: $accent-color;
+}
+
+.date-and-author {
+    color: $accent-color;
 }
