--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -388,7 +388,7 @@ span {
 }
 
 strong {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   font-weight: 700;
 }
 
@@ -422,7 +422,7 @@ table th:not([align]) {
   text-align: inherit;
 }
 table th {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 
 @keyframes spinAround {
@@ -454,7 +454,7 @@ a.box:active {
   background-color: hsl(0, 0%, 100%);
   border-color: hsl(0, 0%, 86%);
   border-width: 1px;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   cursor: pointer;
   justify-content: center;
   padding-bottom: calc(0.5em - 1px);
@@ -506,11 +506,11 @@ a.box:active {
 }
 .button.is-text:hover, .button.is-text.is-hovered, .button.is-text:focus, .button.is-text.is-focused {
   background-color: hsl(0, 0%, 96%);
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .button.is-text:active, .button.is-text.is-active {
   background-color: #e8e8e8;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .button.is-text[disabled], fieldset[disabled] .button.is-text {
   background-color: transparent;
@@ -1479,7 +1479,7 @@ a.box:active {
 .button.is-static {
   background-color: hsl(0, 0%, 96%);
   border-color: hsl(0, 0%, 86%);
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
   box-shadow: none;
   pointer-events: none;
 }
@@ -1761,7 +1761,7 @@ a.box:active {
   vertical-align: top;
 }
 .content table th {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .content table th:not([align]) {
   text-align: inherit;
@@ -1769,12 +1769,12 @@ a.box:active {
 .content table thead td,
 .content table thead th {
   border-width: 0 0 2px;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .content table tfoot td,
 .content table tfoot th {
   border-width: 2px 0 0;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .content table tbody tr:last-child td,
 .content table tbody tr:last-child th {
@@ -2227,7 +2227,7 @@ div.icon-text {
 }
 .table {
   background-color: hsl(0, 0%, 100%);
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .table td,
 .table th {
@@ -2317,7 +2317,7 @@ div.icon-text {
   vertical-align: middle;
 }
 .table th {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .table th:not([align]) {
   text-align: left;
@@ -2341,7 +2341,7 @@ div.icon-text {
 .table thead td,
 .table thead th {
   border-width: 0 0 2px;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .table tfoot {
   background-color: transparent;
@@ -2349,7 +2349,7 @@ div.icon-text {
 .table tfoot td,
 .table tfoot th {
   border-width: 2px 0 0;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .table tbody {
   background-color: transparent;
@@ -2652,7 +2652,7 @@ a.tag:hover {
   line-height: 1.25;
 }
 .subtitle strong {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   font-weight: 600;
 }
 .subtitle:not(.is-spaced) + .title {
@@ -2708,19 +2708,19 @@ a.tag:hover {
   background-color: hsl(0, 0%, 100%);
   border-color: hsl(0, 0%, 86%);
   border-radius: 4px;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .select select::-moz-placeholder, .textarea::-moz-placeholder, .input::-moz-placeholder {
-  color: rgba(54, 54, 54, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select::-webkit-input-placeholder, .textarea::-webkit-input-placeholder, .input::-webkit-input-placeholder {
-  color: rgba(54, 54, 54, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select:-moz-placeholder, .textarea:-moz-placeholder, .input:-moz-placeholder {
-  color: rgba(54, 54, 54, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select:-ms-input-placeholder, .textarea:-ms-input-placeholder, .input:-ms-input-placeholder {
-  color: rgba(54, 54, 54, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select:hover, .textarea:hover, .input:hover, .select select.is-hovered, .is-hovered.textarea, .is-hovered.input {
   border-color: hsl(0, 0%, 71%);
@@ -2733,19 +2733,19 @@ a.tag:hover {
   background-color: hsl(0, 0%, 96%);
   border-color: hsl(0, 0%, 96%);
   box-shadow: none;
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
 }
 .select select[disabled]::-moz-placeholder, [disabled].textarea::-moz-placeholder, [disabled].input::-moz-placeholder, fieldset[disabled] .select select::-moz-placeholder, .select fieldset[disabled] select::-moz-placeholder, fieldset[disabled] .textarea::-moz-placeholder, fieldset[disabled] .input::-moz-placeholder {
-  color: rgba(122, 122, 122, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select[disabled]::-webkit-input-placeholder, [disabled].textarea::-webkit-input-placeholder, [disabled].input::-webkit-input-placeholder, fieldset[disabled] .select select::-webkit-input-placeholder, .select fieldset[disabled] select::-webkit-input-placeholder, fieldset[disabled] .textarea::-webkit-input-placeholder, fieldset[disabled] .input::-webkit-input-placeholder {
-  color: rgba(122, 122, 122, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select[disabled]:-moz-placeholder, [disabled].textarea:-moz-placeholder, [disabled].input:-moz-placeholder, fieldset[disabled] .select select:-moz-placeholder, .select fieldset[disabled] select:-moz-placeholder, fieldset[disabled] .textarea:-moz-placeholder, fieldset[disabled] .input:-moz-placeholder {
-  color: rgba(122, 122, 122, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 .select select[disabled]:-ms-input-placeholder, [disabled].textarea:-ms-input-placeholder, [disabled].input:-ms-input-placeholder, fieldset[disabled] .select select:-ms-input-placeholder, .select fieldset[disabled] select:-ms-input-placeholder, fieldset[disabled] .textarea:-ms-input-placeholder, fieldset[disabled] .input:-ms-input-placeholder {
-  color: rgba(122, 122, 122, 0.3);
+  color: rgba(245, 245, 245, 0.3);
 }
 
 .textarea, .input {
@@ -2876,12 +2876,12 @@ a.tag:hover {
   cursor: pointer;
 }
 .radio:hover, .checkbox:hover {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 [disabled].radio, [disabled].checkbox, fieldset[disabled] .radio, fieldset[disabled] .checkbox,
 .radio input[disabled],
 .checkbox input[disabled] {
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
   cursor: not-allowed;
 }
 
@@ -2931,7 +2931,7 @@ a.tag:hover {
   padding: 0.5em 1em;
 }
 .select:not(.is-multiple):not(.is-loading):hover::after {
-  border-color: hsl(0, 0%, 21%);
+  border-color: #f5f5f5;
 }
 .select.is-white:not(:hover)::after {
   border-color: hsl(0, 0%, 100%);
@@ -3064,7 +3064,7 @@ a.tag:hover {
   font-size: 1.5rem;
 }
 .select.is-disabled::after {
-  border-color: hsl(0, 0%, 48%) !important;
+  border-color: #f5f5f5 !important;
   opacity: 0.5;
 }
 .select.is-fullwidth {
@@ -3394,14 +3394,14 @@ a.tag:hover {
 }
 .file-label:hover .file-cta {
   background-color: #eeeeee;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .file-label:hover .file-name {
   border-color: #d5d5d5;
 }
 .file-label:active .file-cta {
   background-color: #e8e8e8;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .file-label:active .file-name {
   border-color: #cfcfcf;
@@ -3456,7 +3456,7 @@ a.tag:hover {
 }
 
 .label {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   display: block;
   font-size: 1rem;
   font-weight: 700;
@@ -3765,7 +3765,7 @@ a.tag:hover {
   padding-left: 0;
 }
 .breadcrumb li.is-active a {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   cursor: default;
   pointer-events: none;
 }
@@ -4166,7 +4166,7 @@ button.dropdown-item.is-active {
 }
 .menu-list a:hover {
   background-color: hsl(0, 0%, 96%);
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
 }
 .menu-list a.is-active {
   background-color: hsl(229, 53%, 53%);
@@ -4179,7 +4179,7 @@ button.dropdown-item.is-active {
 }
 
 .menu-label {
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
   font-size: 0.75em;
   letter-spacing: 0.1em;
   text-transform: uppercase;
@@ -4427,7 +4427,7 @@ button.dropdown-item.is-active {
 }
 
 .modal-card-title {
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   flex-grow: 1;
   flex-shrink: 0;
   font-size: 1.5rem;
@@ -5494,7 +5494,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 .pagination-next,
 .pagination-link {
   border-color: hsl(0, 0%, 86%);
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   min-width: 2.5em;
 }
 .pagination-previous:hover,
@@ -5521,7 +5521,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   background-color: hsl(0, 0%, 86%);
   border-color: hsl(0, 0%, 86%);
   box-shadow: none;
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
   opacity: 0.5;
 }
 
@@ -5727,7 +5727,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 .panel-heading {
   background-color: hsl(0, 0%, 93%);
   border-radius: 6px 6px 0 0;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   font-size: 1.25em;
   font-weight: 700;
   line-height: 1.25;
@@ -5759,7 +5759,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 
 .panel-block {
   align-items: center;
-  color: hsl(0, 0%, 21%);
+  color: #f5f5f5;
   display: flex;
   justify-content: flex-start;
   padding: 0.5em 0.75em;
@@ -5804,7 +5804,7 @@ label.panel-block:hover {
   text-align: center;
   vertical-align: top;
   width: 1em;
-  color: hsl(0, 0%, 48%);
+  color: #f5f5f5;
   margin-right: 0.75em;
 }
 .panel-icon .fa {
@@ -5835,8 +5835,8 @@ label.panel-block:hover {
   vertical-align: top;
 }
 .tabs a:hover {
-  border-bottom-color: hsl(0, 0%, 21%);
-  color: hsl(0, 0%, 21%);
+  border-bottom-color: #f5f5f5;
+  color: #f5f5f5;
 }
 .tabs li {
   display: block;
@@ -10301,6 +10301,27 @@ html, body {
 
 #selector-icon {
   color: #ad5ad7;
+}
+
+.select select {
+  color: #363636;
+}
+
+.blog__author {
+  color: #ad5ad7;
+  font-size: 16pt;
+}
+
+#blog__byline {
+  margin-bottom: 0rem;
+}
+
+.blog__meta {
+  margin-bottom: 0.75rem;
+}
+
+body header.content:first-child {
+  margin-bottom: 0.75rem;
 }
 
 .date-and-author {
