--- a/squidalytics/templates/cms/articles/blog_page.html
+++ b/squidalytics/templates/cms/articles/blog_page.html
@@ -9,6 +9,7 @@
             <div class="col-md-8">
                 <div class="blog__meta">
                     {% if page.authors %}
+                    <p id="blog__byline">By: </p>
                         <div class="blog__avatars">
                             {% for author in page.authors %}
                                 <div class="blog__author">{% image author.image fill-50x50-c100 class="blog__avatar" %}
@@ -24,7 +25,7 @@
                         <span class="select">
                             <select id="version-selector">
                                 {% for block in page.versions %}
-                                    <option value="{{ block.value.audience_name }}">{{ block.value.audience_name }}</option>
+                                    <option class="select-option" value="{{ block.value.audience_name }}">{{ block.value.audience_name }}</option>
                                 {% endfor %}
                             </select>
                         </span>
