--- a/squidalytics/templates/includes/header.html
+++ b/squidalytics/templates/includes/header.html
@@ -6,6 +6,6 @@
             <a href="/pages/squid-data-research-lab" class="navbar-item">Squid Data Research Lab</a>
         </div>
     </nav>
-    <h1 class="container">{{ header_title|default:calling_page.title }}</h1>
+    <h1 class="container main-title">{{ header_title|default:calling_page.title }}</h1>
     {% block postheader %}{% endblock %}
 </header>
