--- a/squidalytics/templates/base.html
+++ b/squidalytics/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
-<body class="block has-navbar-fixed-top">
+<body class="block has-navbar-fixed-top container is-fluid">
     {% block header %}
         {% include "includes/header.html" with parent=site_root calling_page=self %}
     {% endblock header %}
