--- a/squidalytics/templates/cms/includes/header-blog.html
+++ b/squidalytics/templates/cms/includes/header-blog.html
@@ -8,14 +8,14 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-9">
-            <h1 class="index-header__title index-header__title--blog">{{ page.title }}</h1>
+            <h1 class="blog-title">{{ page.title }}</h1>
             {% if page.subtitle %}
-                <p>{{ page.subtitle }}</p>
+                <p class="blog-subtitle">{{ page.subtitle }}</p>
             {% endif %}
         </div>
         <div class="col-sm-12 col-md-7">
             {% if page.introduction %}
-                <p class="index-header__introduction index-header__introduction--blog">{{ page.introduction }}</p>
+                <p class="blog-intro">{{ page.introduction }}</p>
             {% endif %}
             {% if page.date_published %}
                 <div class="blog__published">
