--- a/squidalytics/templates/base.html
+++ b/squidalytics/templates/base.html
@@ -21,8 +21,9 @@
     <!-- Include the MathJax library -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="{% static 'js/mathjax-config.js' %}"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="https://kit.fontawesome.com/1df894441a.js" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="{% static 'js/mathjax.js' %}"></script>
+    <!-- <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
+    <script async src="https://kit.fontawesome.com/1df894441a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
