--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10287,6 +10287,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   src: url("/static/fonts/Splatfont2.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 html, body {
   font-family: "Splatfont2", sans-serif;
