--- a/squidalytics/templates/cms/blocks/audience_specific_content_block.html
+++ b/squidalytics/templates/cms/blocks/audience_specific_content_block.html
@@ -1,4 +1,6 @@
-{% load wagtailcore_tags%}
-{% for block in self.content %}
-  {% include_block block %}
-{% endfor %}
+{% load wagtailcore_tags %}
+<div class="content">
+  {% for block in self.content %}
+    {% include_block block %}
+  {% endfor %}
+</div>
