Minor update to css

--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10345,4 +10345,8 @@ body header.content:first-child {
   margin-bottom: 1em;
 }
 
+.box figcaption {
+  color: #ad5ad7;
+}
+
 /*# sourceMappingURL=main.css.map */
