Changes to CSS to make image attribution easier to read

--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10346,7 +10346,8 @@ body header.content:first-child {
 }
 
 .box figcaption {
-  color: #ad5ad7;
+  color: #9832cc;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
