--- a/squidalytics/static/scss/main.scss
+++ b/squidalytics/static/scss/main.scss
@@ -100,6 +100,6 @@ body header.content:first-child {
 }
 
 .box figcaption {
-    color: $accent-dark;
+    color: $accent-lighter;
     font-weight: bold;
 }
