--- a/squidalytics/templates/base.html
+++ b/squidalytics/templates/base.html
@@ -18,10 +18,11 @@
     </title>
     {% block extra_head %}{% endblock %}
     
-    <!-- Include the MathJax library -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script src="{% static 'js/mathjax-config.js' %}"></script>
-    <script id="MathJax-script" async src="{% static 'js/mathjax.js' %}"></script>
+    <!-- Include the Katex library -->
+    <link rel="stylesheet" href="{% static 'css/katex.css' %}">
+    <script id="Katex-script" src="{% static 'js/katex.min.js' %}" defer></script>
+    <script src="{% static 'js/auto-render.min.js' %}" onload="renderMathInElement(document.body);" defer></script>
+    <script src="{% static 'js/katex-config.js' %}" defer></script>
     <script async src="https://kit.fontawesome.com/1df894441a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
