Makes bold font also the accent color

--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10360,4 +10360,8 @@ body header.content:first-child {
   color: #c183e1;
 }
 
+strong {
+  color: #ad5ad7;
+}
+
 /*# sourceMappingURL=main.css.map */
