Fixed headers, rearranged some scss

--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10335,6 +10335,15 @@ body header.content:first-child {
 .content .blog-title {
   color: #ad5ad7;
 }
+.content .main-title {
+  color: #d6d6d6;
+}
+.content strong, .content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
+  color: #ad5ad7;
+}
+.content .content-block > *:not(:last-child) {
+  margin-bottom: 1em;
+}
 
 .blog-subtitle {
   color: #9832cc;
@@ -10342,10 +10351,6 @@ body header.content:first-child {
 
 .blog-intro {
   color: #b0b0b0;
-}
-
-.content .content-block > *:not(:last-child) {
-  margin-bottom: 1em;
 }
 
 .katex-html {
@@ -10358,10 +10363,6 @@ body header.content:first-child {
 }
 .box .katex-html {
   color: #c183e1;
-}
-
-strong, h1, h2, h3, h4, h5, h6 {
-  color: #ad5ad7;
 }
 
 /*# sourceMappingURL=main.css.map */
