Fix on modal width

--- a/squidalytics/static/css/main.css
+++ b/squidalytics/static/css/main.css
@@ -10391,4 +10391,8 @@ body header.content:first-child {
   background-color: black; /* Set background color */
 }
 
+.modal-content {
+  width: 100%;
+}
+
 /*# sourceMappingURL=main.css.map */
