--- a/squidalytics/static/scss/main.scss
+++ b/squidalytics/static/scss/main.scss
@@ -159,3 +159,7 @@ body header.content:first-child {
         background-color: black; /* Set background color */
     }
 }
+
+.modal-content {
+    width: 100%;
+}
